# F4

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: Info.plist  f4.desktop
src/: app.rs  highlight.rs  main.rs  menu.rs  message.rs  persistence.rs  subscription.rs  ui.rs  undo_tree.rs  undo_tree_widget.rs  update.rs
