[package]
name = "f4"
version = "0.10.1"
edition = "2024"
license = "MIT"
default-run = "f4"

[[bin]]
name = "f4"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
arboard = "3.6.1"
iced = { version = "0.14", features = ["tokio", "image", "advanced"] }
iced_aw = { version = "0.13", features = ["menu"] }
rfd = "0.15"
