[package]
name = "f4"
version = "1.1.5"
edition = "2024"
license = "MIT"
default-run = "f4"

[[bin]]
name = "f4"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
arboard = "3.6.1"
dirs = "5"
iced = { version = "0.14", features = ["tokio", "image", "advanced"] }
iced_aw = { version = "0.13", features = ["menu"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
